horizontal scroll fix

--- a/src/post_lists/assets/post_list.css
+++ b/src/post_lists/assets/post_list.css
@@ -7,21 +7,11 @@ h1 {
 }
 
 .saber-post-list-canvas {
-  font-family:"Montserrat", Sans-serif;
-  display: -webkit-flex; /* Safari */
-  display: flex; /* Standard syntax */
-  flex-wrap: wrap;
-  width: 100%;
   position: relative;
-  justify-content: stretch;
+  max-width: 1080px;
 }
 .saber-post-list-canvas a {
-  font-family:"Montserrat", Sans-serif;
   color: #54595F;
-  display: inline-block;
-  box-sizing: border-box;
-  padding: 0;
-  width: 100%;
 }
 .saber-post-list-item {
   box-sizing: border-box;
@@ -49,17 +39,10 @@ h1 {
 }
 
 .saber-post-list-item-wrap {
-  width: 33.3333%;
-  max-width: 33.3333%;
   box-sizing: border-box;
   padding: 0 20px 20px 0;
 }
 
 .saber-post-list-item-wrap:nth-child(3n+0) {
   padding-right: 0;
-}
-
-.saber-post-list-canvas {
-  max-width: 100%;
-  overflow: hidden;
 }
